docs/versioned_docs/version-5.13/fragments/config-images.mdx
```yaml
images:                             # map[string]struct | Images to be built and pushed
  image1:                           # string   | Name of the image
    image: gcr.io/username/image    # string   | Image repository and name 
    tags:                           # string[] | Image tags (may be a tagging schema with variables)
    - latest
    - 0.0.1
    - dev-${DEVSPACE_GIT_COMMIT}
    - random-####                   #          | Each hashtag is replaced with a random character during building
    dockerfile: ./Dockerfile        # string   | Relative path to the Dockerfile used for building (Default: ./Dockerfile)
    context: ./                     # string   | Relative path to the context used for building (Default: ./)
    entrypoint: []                  # string[] | Override ENTRYPOINT defined in Dockerfile
    cmd: []                         # string[] | Override CMD defined in Dockerfile
    createPullSecret: true          # bool     | Create a pull secret containing your Docker credentials (Default: false)
    rebuildStrategy: ''             # string   | One of [always, ignoreContextChanges] which determines when DevSpace rebuilds the image
    injectRestartHelper: true       # bool     | If true will inject the restart helper into the container to restart the container automatically
    restartHelperPath: ./script.sh  # string   | If configured devspace will inject this script into the container and wrap the ENTRYPOINT around this 
    appendDockerfileInstructions:   # string[] | Dockerfile instructions that should be appended for the current build
    - USER root                    
    build: ...                      # struct   | Build options for this image
  image2: ...
```
